--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,10 @@
 .bgOn {
   background: #00e1df;
 }
+
+input[type=date] {
+  line-height: 34px;
+  border: 1px solid #e1e1e1;
+  height: 37px;
+  padding: 0 12px;
+}
